<resources>
    <string name="app_name">Tower of the Sorcerer</string>
    <string name="game_title1">Tower of the</string>
    <string name="game_title2">Sorcerer</string>
    <string name="new_game">New Game</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="difficulty_select">Select a difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="game_settings">Game Settings</string>
    <string name="bgm_text">Enable background music</string>
    <string name="sfx_text">Enable sound effects</string>
    <string name="game_speed_text">Game speed</string>
    <string name="fast">Fast</string>
    <string name="slow">Slow</string>
    <string name="thief">Thief</string>
    <string name="saint">Saint</string>
    <string name="merchant">Merchant</string>
    <string name="hero">Hero</string>
    <string name="skeleton_captain">Skeleton Captain</string>
    <string name="vampire">Vampire</string>
    <string name="knight_captain">Knight Captain</string>
    <string name="zeno">Zeno</string>
    <string name="archmage">Archmage</string>
    <string name="princess">Princess</string>
    <string name="developer">Game Developer</string>
    <string name="back_btn_alert">Do you want to exit the game?</string>
    <string name="game_over_title">Game Over</string>
    <string name="game_over_message">Good luck on your next try.</string>
    <string name="game_finish_title">Congratulations</string>
    <string name="game_finish_message">You successfully beat the game!</string>
    <string name="me_dialog1">Welcome to the Tower of the Sorcer, brave soul. Your task is to rescue
        the Princess from the hands of the Demon Zeno. Try to use the stairs on the upper left
        conner on this floor to go upstairs. Different floors will have different obstacles and
        items. To get though monsters, you have to fight them. To unlock doors, you need to spend a
        key of the same color. Have fun exploring. If you like this game, please talk to me
        again.</string>
    <string name="me_dialog2">I am an international student from Boston University, and I am
        graduating in May 2018. I am currently looking for software developing jobs which can
        provide me sponsorship. My resume can be found in my GitHub repository
        \'https://github.com/MrIceCreamMan/Tower_of_the_Sorcerer\', and my email address is
        \'catching@bu.edu\'. Thank you very much for helping me with job search. </string>
    <string name="wake_up">. . . \t\t. . . \t\tup. . . \t\twake up. . .</string>
    <string name="thief0">I got caught when I was looking for a treasure in this tower. You are so
        lucky because I have just finished digging the tunnel. Follow me and let\'s get
        out!</string>
    <string name="thief1">Your weapons were taken away. I know there is one iron sword on the 5th
        floor, and one iron shield on the 9th floor. You should avoid fight before you get weapons.
        By the way, I have dug many tunnels in this tower. If you are able to find them, they will
        help you a lot. Good luck.</string>
    <string name="thief2">Thank you so much for killing the Skeleton Captain so I can go upstairs.
        I heard there is a silver sword on 17th floor. Good luck.</string>
    <string name="thief3">Did the giant octopus block your way? Don\'t worry, I have just finished
        this tunnel. I gotta go upstairs and look for my treasure. Enjoy this free tunnel.</string>
    <string name="thief4">Sigh, I am out of luck. I can\'t find my treasure anywhere. I need to get
        some rest.</string>
    <string name="thief5">Thank you so much for saving me! I got caught again, but this time, they
        took my mattock away so I can\'t get out myself. I have hidden my other mattocks in the
        tower and now I will look for them. Is the Dragon on the 35th floor blocking your way? To
        pay you back. I will dig a tunnel for you so you can get around the Dragon.</string>
    <string name="thief6_1">Give me some time, I must find my hidden mattocks first. I will catch
        you up on the 35th floor.</string>
    <string name="thief6_2">Just follow the tunnel and you will go upstairs. After this incident, I
        realized that it\'s not worth risking my life looking for some treasures which may not even
        exist. I\'m outta here. Good luck and goodbye.</string>
    <string name="thief7">What? Thief!? Why are you here? Didn\'t you leave?</string>
    <string name="thief8">Haha! Pretty surprised seeing me huh? The only reason I am here is that I
        am Zeno!</string>
    <string name="thief9">But why? Why would you help when you could easily kill me?</string>
    <string name="thief10">Because of power. I want more power!!! The Archmage is only slightly
        stronger than me, but he became the owner of this tower while I was assigned to be the
        region boss on the 50th floor. When I found him became obsessed with his spell book, I knew
        my chance was coming. Before he locked himself up in his chamber trying to create the
        strongest spell, I managed to replace the last page of his book so he would never succeed.
        Later, I started to kill his minions and he did know because he has not gone out of his
        chamber yet. Now he is dead and I will rule this tower!</string>
    <string name="thief11">If I can kill him, what makes you think I won\'t kill you?</string>
    <string name="thief12">You were able to kill him because he tried to use magic against you. He
        didn\'t know that the sacred weapons you are wielding resist magics. According to the last
        page of the spell book: \'both the Sacred Sword and the Sacred Shield were born in the lava.
        They were purified by the holy fire so they resist magic.\' I tried to steal these weapons
        myself but I almost died to the lava protecting the Sacred Shield, so I decided to let
        others to steal them for me, and that\'s why I didn't kill then. Though my magic power is
        not the greatest, I combat power is much stronger than the Archmage. Hand over your weapons
        or you will die!</string>
    <string name="saint_2f">Thank you so much for saving me. I can increase your attack and defense
        power by 3 percent. Do you want me to do it now?</string>
    <string name="saint_3f">I am too old to fight. Brave young man, you should take this Staff of
        Wisdom, which reveals the strength of monsters. Take care and good luck.</string>
    <string name="saint_4f">There are doors which cannot be opened with a key. To open them, you
        will have to defeat the monsters which guard them.</string>
    <string name="saint_6f">After you make a purchase from a merchant, go talk to him again because
        he will tell you some important information.</string>
    <string name="saint_16f">I heard that there are two hidden red keys hidden in this
        area.</string>
    <string name="saint_16fh">Thank god, you saved me! The slime-man blocked the exit. Take this
        bottle of Elixir as a symbol of my gratitude. It recovers your health based on your attack
        and defense power. The stronger you are, the more health you will recover.</string>
    <string name="saint_18f">Many knights had failed to pass this area because of those Rock
        Monsters. Their defenses are very high, so you should increase your offense at the altar a
        few time in this area.</string>
    <string name="saint_21f">Do you know the Archmage in this area is the owner of this tower? He is
        way too strong for you now. Fighting him is suicide. You should go to higher floors and get
        stronger first.</string>
    <string name="saint_23f0">It is said that there is a hidden message in this floor.</string>
    <string name="saint_23f1">\'Go 0F\' Go to the 0th floor!</string>
    <string name="saint_27f">At this current stage, if you have 1500 health, 80 attack, 98 defense,
        5 yellow keys and 1 blue key, you are in an ideal state.</string>
    <string name="saint_31f">The attack power of the swordsmen is too high. You should only fight
        them when you can one shot them, or you will lose a lot of health.</string>
    <string name="saint_33f">When monsters charge to you, they will attack first!</string>
    <string name="saint_36f">If you find the four secret tunnels in this floor, you will be able to
        go upstairs without fighting strong enemies.</string>
    <string name="saint_37f">This floor is an item warehouse, but to get the treasure, you will have
        to use the enhanced mattock.</string>
    <string name="saint_39f">At three o\'clock, the secret treasure which allows you to teleport
        three times will appear.</string>
    <string name="saint_42f">Mages can attack from a distance with their magic. Passing through a
        pair of Demon Sergeants will cut your health in half.</string>
    <string name="saint_45f">The 44th floor is in a different dimension, and you can\'t get there
        with stairs, but you may try to teleport.</string>
    <string name="saint_46f">There is a secret about the 41st floor - it is perfectly symmetrical
        even though it doesn't seem to be.</string>
    <string name="saint_48f">The shape of five on a dice is actually an ancient symbol for sealing
        magic. Remember the symbol because it will help you in the future.</string>
    <string name="saint_default">Good luck young man!</string>
    <string name="merchant_2f0">Thank you so much for freeing me. Please take this 1000 gold as a
        gift.</string>
    <string name="merchant_6f0">I have a blue key for 50 gold. Would you like to buy it?</string>
    <string name="merchant_7f0">I have 5 yellow keys for 50 gold. Would you like to buy
        them?</string>
    <string name="merchant_12f0">I have a red key for 800 gold. Would you like to buy it?</string>
    <string name="merchant_12fh">I have lots of yellow keys, 1000 gold each. Would you like to buy
        one?</string>
    <string name="merchant_15f0">I have a blue key for 200 gold. Would you like to buy it?</string>
    <string name="merchant_28f">Would you like to sell your yellow keys to me for 100 gold each.
        I need lots of them.</string>
    <string name="merchant_31f0">I have 1 blue key and 4 yellow keys for 1000 gold. Would you like
        to buy them?</string>
    <string name="merchant_38f0">I have 3 yellow keys for 200 gold. Would you like to buy
        them?</string>
    <string name="merchant_39f0">I have 3 blue keys for 2000 gold. Would you like to buy
        them?</string>
    <string name="merchant_45f0">I can recover you 2000 health for 1000 gold. Would you let me do
        it?</string>
    <string name="merchant_47f0">I have a enhanced mattock for 4000 gold. Would you like to buy
        it?</string>
    <string name="merchant_2f1">Thank you. Good luck on your journey</string>
    <string name="merchant_6f1">This tower consists of 50 floors. Every 10 floors form one area, and
        each area has one boss guarding the entrance to the next area. To proceed, you must defeat
        these bosses.</string>
    <string name="merchant_7f1">When you offer gold in exchange for strength at an alter, prioritize
        defense can save you a lot of health in the following fights, but it isn\'t always the best
        option.</string>
    <string name="merchant_12f1">Have you found the secret tunnels on the 9th, 16th, and 18th floor?
        I heard that there are more of them on higher floors.</string>
</resources>