<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_margin="20dp"
    android:background="@color/my_color_gray">

    <TextView
        android:id="@+id/tv_game_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/game_settings"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <CheckBox
        android:id="@+id/cb_bgm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_game_settings"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10sp"
        android:paddingStart="10sp"
        android:paddingRight="10sp"
        android:paddingEnd="10sp"
        android:text="@string/bgm_text"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/cb_sfx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cb_bgm"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10sp"
        android:paddingStart="10sp"
        android:paddingRight="10sp"
        android:paddingEnd="10sp"
        android:text="@string/sfx_text"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_game_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cb_sfx"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/game_speed_text"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/sb_game_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_game_speed"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:max="60" />

    <RelativeLayout
        android:id="@+id/rl_game_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sb_game_speed"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_slow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/slow"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_fast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/fast"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_settings_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rl_game_speed"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/ok" />
</RelativeLayout>