<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.the95.tower_of_sorcerer.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/linearLayout"
        android:layout_toStartOf="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="cursive"
        android:text="@string/game_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="7dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/new_game"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/lave_key60"
            android:text="@string/new_game"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/load"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/lave_key60"
            android:text="@string/load"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/settings"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/lave_key60"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/exit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/lave_key60"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
